--- a/src/main/java/Vistas/Pedidos.form
+++ b/src/main/java/Vistas/Pedidos.form
@@ -314,7 +314,11 @@
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="0"/>
+                  <StringArray count="3">
+                    <StringItem index="0" value="Mayorista"/>
+                    <StringItem index="1" value="Minorista"/>
+                    <StringItem index="2" value="Comprador en l&#xed;nea"/>
+                  </StringArray>
                 </Property>
               </Properties>
               <AuxValues>
@@ -394,32 +398,9 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="1" attributes="0">
-                                      <Component id="jLabel79" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel80" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel78" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel76" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel77" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel81" alignment="1" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="FTxTFechaPedido1" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="TxtIDFormula5" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jComboBox22" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jComboBox23" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="FTxTFechaEntrega1" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
-                              </Group>
-                              <Component id="jScrollPane7" alignment="1" max="32767" attributes="0"/>
-                          </Group>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="128" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="BtnAgregarFilaF2" alignment="1" min="-2" pref="140" max="-2" attributes="0"/>
                                   <Group type="102" alignment="1" attributes="0">
@@ -434,6 +415,34 @@
                                           <Component id="TxtIDFormula6" alignment="0" min="-2" pref="338" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <Component id="jLabel81" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" attributes="0">
+                                      <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Component id="jLabel76" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel78" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel79" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel77" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabel80" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="FTxTFechaPedido1" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="TxtIDFormula5" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jComboBox22" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jComboBox23" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="FTxTFechaEntrega1" alignment="0" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                  <Component id="jScrollPane7" pref="509" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -465,9 +474,9 @@
                           <Component id="FTxTFechaEntrega1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel78" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jComboBox22" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jComboBox22" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel78" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jLabel81" min="-2" max="-2" attributes="0"/>
@@ -645,7 +654,11 @@
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="0"/>
+                  <StringArray count="3">
+                    <StringItem index="0" value="Mayorista"/>
+                    <StringItem index="1" value="Minorista"/>
+                    <StringItem index="2" value="Comprador en l&#xed;nea"/>
+                  </StringArray>
                 </Property>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
@@ -979,7 +992,11 @@
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="0"/>
+                  <StringArray count="3">
+                    <StringItem index="0" value="Mayorista"/>
+                    <StringItem index="1" value="Minorista"/>
+                    <StringItem index="2" value="Comprador en l&#xed;nea"/>
+                  </StringArray>
                 </Property>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
@@ -1313,7 +1330,11 @@
                   <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="0"/>
+                  <StringArray count="3">
+                    <StringItem index="0" value="Mayorista"/>
+                    <StringItem index="1" value="Minorista"/>
+                    <StringItem index="2" value="Comprador en l&#xed;nea"/>
+                  </StringArray>
                 </Property>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
