--- a/src/main/java/Vistas/Formulas.form
+++ b/src/main/java/Vistas/Formulas.form
@@ -319,7 +319,7 @@
             <Component class="javax.swing.JButton" name="BtnAgregarFilaF">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Light" size="12" style="0"/>
+                  <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Agregar fila"/>
               </Properties>
@@ -337,6 +337,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="BtnEliminarFilaAlta">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI Light" size="14" style="0"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Eliminar Fila"/>
               </Properties>
               <Events>
@@ -618,6 +621,11 @@
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="CambiosFormulas">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Light" size="14" style="0"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
               <JTabbedPaneConstraints tabName="Cambios">
@@ -633,46 +641,38 @@
                       <EmptySpace min="91" pref="91" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="BtnBuscarCambios" min="-2" pref="140" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="BtnGuardarFormula2" min="-2" pref="140" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="BtnEliminarFilaCambios" max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="BtnAgregarFilaF1" min="-2" pref="119" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jButton15" min="-2" pref="140" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jLabel68" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="BtnGuardarFormula2" min="-2" pref="140" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="BtnEliminarFilaCambios" max="32767" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="BtnAgregarFilaF1" min="-2" pref="119" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jButton15" min="-2" pref="140" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jLabel68" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabel66" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jLabel67" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jLabel65" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jLabel63" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jLabel64" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="TxtVersionFormula2" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="FTxTFechaRegistro2" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jTextField23" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="TxtIDFormula2" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jComboBox19" alignment="0" pref="393" max="32767" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                                  <Component id="jScrollPane5" alignment="1" pref="537" max="32767" attributes="0"/>
+                                  <Component id="jLabel66" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel67" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel65" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel63" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel64" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="TxtVersionFormula2" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="FTxTFechaRegistro2" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jTextField23" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="TxtIDFormula2" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jComboBox19" alignment="0" pref="393" max="32767" attributes="0"/>
+                              </Group>
                           </Group>
+                          <Component id="jScrollPane5" alignment="1" pref="537" max="32767" attributes="0"/>
                       </Group>
+                      <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -707,10 +707,8 @@
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jLabel68" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jScrollPane5" pref="133" max="32767" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="BtnBuscarCambios" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jScrollPane5" pref="126" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="BtnGuardarFormula2" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButton15" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
@@ -898,7 +896,7 @@
             <Component class="javax.swing.JButton" name="BtnAgregarFilaF1">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Light" size="12" style="0"/>
+                  <Font name="Segoe UI Light" size="14" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Agregar fila"/>
                 <Property name="enabled" type="boolean" value="false"/>
@@ -917,16 +915,11 @@
             </Component>
             <Component class="javax.swing.JButton" name="BtnEliminarFilaCambios">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI Light" size="14" style="0"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Eliminar Fila"/>
               </Properties>
-            </Component>
-            <Component class="javax.swing.JButton" name="BtnBuscarCambios">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Buscar"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnBuscarCambiosActionPerformed"/>
-              </Events>
             </Component>
           </SubComponents>
         </Container>
